[project]
name = "c214-projeto"
version = "0.1.0"
description = "Projeto de exemplo de  c214 -ML"
authors = [
    {name = "AlvaroCareli",email = "122116260+alvarosamp@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "c214_projeto", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
